--- a/index.html
+++ b/index.html
@@ -3,41 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curiosidades do Mundo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-    <h1>Curiosidades do Mundo </h1>
-    <nav>
-    <ul>
-        <li><a href="#">Iníco</a></li>
-        <li><a href="#">Curiosidades</a></li>
-        <li><a href="#">Galeria</a></li>
-        <li><a href="#">Contato</a><li>
-    </ul>
-    </nav>
+        <h1>Curiosidades do Mundo</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Curiosidades</a></li>
+                <li><a href="#">Galeria</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-    
-       <section class="curiosidades">
-        <h2>Voçê sabia?</h2>
-        <p> O polvo tem trê corações e seu sengue é azul</p>
-        </section>
+  <section class="curiosidade">
+    <h2>Você sabia?</h2>
+    <p>O polvo tem três corações e seu sangue é azul</p>
+  </section>
 
-        <section class="curiosidades">
-            <h2> Curiosidades Histórica </h2>
-            <p>Cleopata viveu mais proxima do primeiro pousa na lua do que da contrução das pirâmide </p>
-       </section>
+  <section class="curiosidade">
+    <h2>Curiosidade Histórica</h2>
+    <p>Cleópatra viveu mais próxima do primeiro pouso na Lua do que da construção das pirâmides!</p>
+  </section>
 
-       <section class="curiosidades">
-        <h2>Curiosidades Científica</h2>
-        <p>O DNA humano é 60% semelhante ao de uma banana! </p>
-       </section>
-
+<section class="curiosidade">
+    <h2>Curiosidade Científica</h2>
+    <p>O DNA humano é 60% semelhante ao de uma banana!</p>
+</section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Curiosidades do Mundo. Todos os direitos reservados</p>
+        <p>&copy; 2025 Curiosidades do Mundo. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
